packages/parser/test/parser/E0103-function-type.txt
a: (int, -> void
===== err =====
anonymous:1:9: ParseError: E0140 - Expected function type parameter type
1 | a: (int, -> void
  |         ^

anonymous:1:9: ParseError: E0103 - Expected closing parenthesis after function type parameters
1 | a: (int, -> void
  |         ^
